fixed the dashboard render problem with scrollbar

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -112,6 +112,35 @@
 .cards {
   display: flex;
   flex-flow: row wrap;
+  height: 30vh;
+  overflow-y: auto;
+  width: 100%;
+}
+
+#style-6::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+#style-6::-webkit-scrollbar {
+  width: 1rem;
+  background-color: #f5f5f5;
+}
+
+#style-6::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #f90;
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
 }
 
 .cards button {
